mcww_web/css/presets.css
:root {
    --presets-radio-drag-and-drop-color: var(--primary-200);
}
body.dark {
    --presets-radio-drag-and-drop-color: var(--primary-900);
}
.presets-title{
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 5px;
}
.presets-editor-main-column {
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
}
div:has(>.mcww-presets-radio) {
    border: none;
    background: none;
    box-shadow: none;
    overflow: visible;
}
.mcww-presets-radio {
    border: none;
    background: none;
    padding: 0;
    overflow: visible !important;
    input {
        display: none;
    }
    label {
        border: 1px solid var(--border-color-primary);
        border-radius: var(--button-large-radius);
        overflow: hidden;
        background-image: none;
        background-color: transparent;
        padding: 0;
        margin: 0;
        width: fit-content;
        height: fit-content;
        position: relative;
        overflow: visible;
        &:hover {
            border-color: var(--border-color-accent);
            background: var(--table-row-focus);
        }
        &.selected {
            background: var(--workflow-radio-label-background-selected);
        }
        span {
            margin: 0;
            padding: 0;
            padding: var(--size-1) var(--size-2);
            user-select: none;
        }
        &.drag-left-line::before {
            content: '';
            position: absolute;
            left: -5.5px;
            top: 0;
            bottom: 0;
            width: 1px;
            background-color: var(--border-color-primary);
            overflow: visible;
        }
        &.drag-right-line::after {
            content: '';
            position: absolute;
            right: -5.5px;
            top: 0;
            bottom: 0;
            width: 1px;
            background-color: var(--border-color-primary);
            overflow: visible;
        }
        &.drag-active {
            margin-top: -2px;
            border-top: 2px solid var(--presets-radio-drag-and-drop-color);
        }
    }
    .wrap {
        max-height: 61vh;
        overflow-y: auto;
    }
}

.presets-dataset {
    resize: vertical;
    max-height: none;
    &, &>div {
        overflow-y: auto;
    }
    .paginate {
        max-width: fit-content;
        button.current-page {
            color: var(--color-accent);
            font-size: 110%;
            text-decoration: underline;
            margin-top: -1px;
        }
        &:has(>button.current-page:first-of-type) .mcww-next-previous-page .previous,
        &:has(>button.current-page:last-of-type) .mcww-next-previous-page .next {
            opacity: 0.3;
            pointer-events: none;
        }
    }
}

.presets-filter {
    margin-left: 0;
    margin-right: auto;
}

.edit-presets-button {
    margin-right: 1vw;
    @media (max-width: 767px) {
        margin-right: 3.5vw;
    }
}

.saved-filters-dataset {
    --block-border-width: unset;
    box-shadow: var(--block-shadow);
    border-color: var(--block-border-color);
    border-radius: var(--block-radius);
    border-style: dashed !important;
    background: var(--block-background-fill);
    padding: var(--spacing-md);
    overflow-y: auto !important;
    max-height: 126px;
    @media (max-width: 767px) {
        max-height: 201px;
    }
    &:not(:has(.gallery-item)) {
        display: none;
    }
}

.presets-batch-dropdown .wrap-inner {
    max-height: 60vh;
    overflow-y: auto;
}

